<resources>
    <string name="app_name">Dicoding Events</string>

    <string name="title_activity_main_navigation">Dicoding Events</string>
    <string name="title_home">Home</string>
    <string name="title_upcoming">Upcoming</string>
    <string name="title_finished">Finished</string>
    <string name="title_profile">Profile</string>

    <string name="search">Search</string>
    <string name="explore_dicoding_events">Explore Dicoding \nEvents</string>
    <string name="upcoming_events">Upcoming Events</string>
    <string name="finished_events">Finished Events</string>
    <string name="register_event">Register Event</string>
    <string name="event_date">Event Date</string>
    <string name="event_name">EventName</string>
    <string name="event_description">Description</string>
    <string name="event_status">Status</string>
    <string name="event_slots">Slots</string>
    <string name="event_owner">Event Owner</string>
    <string name="event_city_name">City Name</string>
    <string name="an_error_occurred">An Error Occurred</string>
    <string name="no_data">No Data</string>
    <string name="author_name">Faradaii</string>
    <string name="from">From</string>
    <string name="dicoding">Dicoding</string>
    <string name="event">Event</string>
    <string name="profile">Profile</string>
    <string name="about_app">About App</string>
    <string name="event_participant">Event Participant</string>
    <string name="setting">Setting</string>
    <string name="enable_daily_reminders_to_stay_update_with_latest_event_enable_to_try_your_first">Enable daily reminders to stay update with latest event (enable to try your first!)</string>
    <string name="daily_reminder">Daily Reminder</string>
    <string name="network_required">*network required</string>
    <string name="switch_between_light_and_dark_themes_to_enhance_visibility">Switch between light and dark themes to enhance visibility</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="asking_for_permission">Asking For Permission</string>
    <string name="accept_permission">Accept Permission</string>
    <string name="user_dicoding">User_Dicoding</string>
    <string name="search_events">Search Events</string>
    <string name="it_looks_like_there_s_nothing_here_at_the_moment_try_checking_back_later">It looks like there’s nothing here at the moment. Try checking back later!</string>
    <string name="oops_nothing_found">Oops, Nothing Found</string>
    <string name="something_went_wrong_while_processing_your_request_please_try_again_later">Something went wrong while processing your request. Please try again later.</string>
    <string name="no_favorites_yet">No Favorites Yet</string>
    <string name="you_haven_t_added_anything_to_your_favorites_start_exploring_and_tap_the_favorite_icon_to_save_items">You haven’t added anything to your favorites. Start exploring and tap the favorite icon to save items.</string>
    <string name="no_results_found">No Results Found</string>
    <string name="couldn_t_find_any_matches_for_your_search_please_try_different_keywords">Couldn’t find any matches for your search. Please try different keywords!</string>
    <string name="no_events_viewed">No Events Viewed</string>
    <string name="you_haven_t_viewed_any_events_yet_start_exploring_events">You haven\'t viewed any events yet. Start exploring events!</string>
    <string name="permission_needed">Permission Needed</string>
    <string name="to_provide_the_best_experience_we_need_access_to_certain_features_please_grant_the_required_permissions_to_continue">To provide the best experience, we need access to certain features. Please grant the required permissions to continue.</string>
    <string name="ready_to_search">Ready to Search?</string>
    <string name="start_by_typing_in_a_keyword_to_find_what_you_re_looking_for">Start by typing in a keyword to find what you\'re looking for.</string>
    <string name="version_app">version 2.0.0</string>
    <string name="about_author">Author - Faradaii</string>
    <string name="loading_head">Please Wait</string>
    <string name="loading_body">We\'re gathering your content. This may take a moment.</string>
</resources>